# lovelace

./: .clangd  .gitignore  CMakeLists.txt  README.md  changelog.md  roadmap.md  t.c  t.s
lace/: .gitignore  CMakeLists.txt  roadmap.md
lace/include/lace/codegen/: Codegen.hpp  LIRCodegen.hpp  LLVMCodegen.hpp
lace/include/lace/core/: Diagnostics.hpp  Options.hpp  ThreadPool.hpp
lace/include/lace/lexer/: Lexer.hpp  Token.hpp
lace/include/lace/parser/: Parser.hpp
lace/include/lace/tools/: Files.hpp
lace/include/lace/tree/: AST.hpp  Defn.hpp  Expr.hpp  NameAnalysis.hpp  Printer.hpp  Rune.hpp  Scope.hpp  SemanticAnalysis.hpp  Stmt.hpp  SymbolAnalysis.hpp  Type.hpp  Visitor.hpp
lace/include/lace/types/: SourceLocation.hpp  SourceSpan.hpp
lace/samples/: .gitignore  A.lace  A.lace.ast  A.lace.lir  A.lace.ll  A.lace.s  B.lace  B.lace.lir  B.lace.s  C.lace  C.lace.lir  C.lace.s  compile.sh  file.lace  fmt.c  linux.lace  linux.lace.ast  linux.lace.lir  linux.lace.ll  linux.lace.s  mem.lace  mem.lace.ast  mem.lace.lir  mem.lace.ll  mem.lace.s  return_zero.stm  rt.s  string.lace  test.lace
lace/source/: CMakeLists.txt  lace.cpp
lace/source/codegen/: CMakeLists.txt  LIRCodegen.cpp  LIRCodegenAddressed.cpp  LIRCodegenBinary.cpp  LIRCodegenCall.cpp  LIRCodegenCast.cpp  LIRCodegenDefn.cpp  LIRCodegenExpr.cpp  LIRCodegenOp.cpp  LIRCodegenStmt.cpp  LIRCodegenUnary.cpp  LIRCodegenValued.cpp  LLVMCodegen.cpp  LLVMCodegenAddressed.cpp  LLVMCodegenDefn.cpp  LLVMCodegenOp.cpp  LLVMCodegenStmt.cpp  LLVMCodegenValued.cpp  SPBECodegenDecl.cpp  SPBECodegenStmt.cpp
lace/source/core/: CMakeLists.txt  Diagnostics.cpp  Lexer.cpp
lace/source/lexer/: CMakeLists.txt  Lexer.cpp
lace/source/parser/: CMakeLists.txt  ParseDefn.cpp  ParseExpr.cpp  ParseRune.cpp  ParseStmt.cpp  Parser.cpp
lace/source/tools/: CMakeLists.txt  Files.cpp
lace/source/tree/: AST.cpp  CMakeLists.txt  Defn.cpp  Expr.cpp  NameAnalysis.cpp  Printer.cpp  Rune.cpp  Scope.cpp  SemanticAnalysis.cpp  Stmt.cpp  SymbolAnalysis.cpp  Type.cpp
lace/std/: rt.c
lace/test/: CodegenTests.cpp  DefnParserTests.cpp  ExprParserTests.cpp  LexerTests.cpp  RuneParserTests.cpp  SemanticAnalysisTests.cpp  StmtParserTests.cpp  SymbolAnalysisTests.cpp  TypeParserTests.cpp
lace/test/harness/: run.py
lir/: CMakeLists.txt
lir/include/lir/analysis/: LoweringPass.hpp  Pass.hpp
lir/include/lir/graph/: BasicBlock.hpp  Builder.hpp  CFG.hpp  (+10 more)
lir/source/: CMakeLists.txt
lir/source/X64/: X64AsmWriter.cpp  X64InstrSelector.cpp  X64Printer.cpp
lir/source/analysis/: CMakeLists.txt  LoweringPass.cpp  PrintPass.cpp  SSARewritePass.cpp  TargetLoweringPass.cpp
lir/source/graph/: BasicBlock.cpp  Builder.cpp  CFG.cpp  CMakeLists.txt  Constant.cpp  Function.cpp  Global.cpp  InstrBuilder.cpp  Instruction.cpp  Local.cpp  Parameter.cpp  Print.cpp  Printer.cpp  Type.cpp  Use.cpp  Value.cpp
lir/source/machine/: AsmWriter.cpp  CMakeLists.txt  InstSelector.cpp  MachFunction.cpp  MachInst.cpp  MachLabel.cpp  MachOperand.cpp  Machine.cpp  Printer.cpp  Register.cpp  RegisterAllocator.cpp  RegisterAnalysis.cpp  Segment.cpp
scc/: .gitignore  CMakeLists.txt  README.md  TODO.md  scc.cpp
scc/include/ast/: Context.hpp  Decl.hpp  Expr.hpp  Parser.hpp  QualType.hpp  Scope.hpp  Sema.hpp  Stmt.hpp  TranslationUnit.hpp  Type.hpp  TypeContext.hpp  Visitor.hpp
scc/include/codegen/: Codegen.hpp
scc/include/core/: Logger.cpp  Logger.hpp  SourceSpan.hpp  Span.hpp  Tools.hpp  TranslationUnit.hpp
scc/include/lexer/: Lexer.hpp  Token.hpp
scc/samples/: binary.c  redef.c
scc/source/: scc.cpp
scc/source/ast/: Codegen.cpp  Context.cpp  Decl.cpp  Expr.cpp  Parser.cpp  Printer.cpp  QualType.cpp  Scope.cpp  Sema.cpp  Stmt.cpp  Type.cpp  TypeContext.cpp
scc/source/codegen/: Codegen.cpp
scc/source/core/: Logger.cpp  Tools.cpp
scc/source/lexer/: Lexer.cpp
scc/test/: LexerTests.cpp  ParseTypeTests.cpp  ParserTests.cpp  SemaTests.cpp  cc_compare.py
spbe/: CMakeLists.txt  README.md
spbe/include/X64/: X64.hpp  X64AsmWriter.hpp  X64InstrSelector.hpp
spbe/include/analysis/: LLVMTranslatePass.hpp  Pass.hpp  SSARewritePass.hpp  TargetLoweringPass.hpp  TrivialDCEPass.hpp
spbe/include/graph/: BasicBlock.hpp  Basicblock.hpp  CFG.hpp  Constant.hpp  Function.hpp  Global.hpp  InlineAsm.hpp  InstrBuilder.hpp  Instruction.hpp  Local.hpp  Type.hpp  Use.hpp  User.hpp  Value.hpp
spbe/include/machine/: AsmWriter.hpp  InstrSelector.hpp  MachAnalysis.hpp  MachBasicBlock.hpp  MachFunction.hpp  MachInstruction.hpp  MachObject.hpp  MachOperand.hpp  MachRegister.hpp  Rega.hpp  RegisterAllocator.hpp  RegisterAnalysis.hpp
spbe/include/x64/: x64.hpp  x64AsmWriter.hpp
spbe/source/X64/: Printer.legacy.cpp  X64.cpp  X64AsmWriter.cpp  X64InstrSelector.cpp
spbe/source/analysis/: LLVMTranslatePass.cpp  PrintPass.cpp  SSARewritePass.cpp  TargetLoweringPass.cpp  TrivialDCEPass.cpp
spbe/source/graph/: BasicBlock.cpp  Basicblock.cpp  CFG.cpp  Constant.cpp  Function.cpp  Global.cpp  InstrBuilder.cpp  Instruction.cpp  Local.cpp  Type.cpp  Use.cpp  Value.cpp
spbe/source/machine/: MachAnalysis.cpp  MachBasicBlock.cpp  MachFunction.cpp  MachInstruction.cpp  MachObject.cpp  MachOperand.cpp  Rega.cpp  RegisterAllocator.cpp  RegisterAnalysis.cpp
spbe/source/x64/: x64.cpp  x64AsmWriter.cpp
stmc/: .gitignore  CMakeLists.txt  roadmap.md
stmc/samples/: return_zero.stm
stmc/source/: stmc.cpp
stmc/source/codegen/: SPBECodegen.cpp  SPBECodegenDecl.cpp  SPBECodegenExpr.cpp  SPBECodegenRune.cpp  SPBECodegenStmt.cpp
stmc/source/core/: Diagnostics.cpp  Lexer.cpp
stmc/source/parser/: ParseDecl.cpp  ParseExpr.cpp  ParseRune.cpp  ParseStmt.cpp  Parser.cpp
stmc/source/tools/: Files.cpp
stmc/source/tree/: Context.cpp  Decl.cpp  Expr.cpp  Rune.cpp  Scope.cpp  SemanticAnalysis.cpp  Stmt.cpp  SymbolAnalysis.cpp  Type.cpp  TypeUse.cpp
stmc/std/: rt.c
stmc/test/: DeclParserTests.cpp  ExprParserTests.cpp  LexerTests.cpp  RuneParserTests.cpp  SPBECodegenTests.cpp  SemanticAnalysisTests.cpp  StmtParserTests.cpp  SymbolAnalysisTests.cpp  TypeParserTests.cpp
stmc/test/harness/: run.py
(+132 files in other folders)
